--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,20 @@
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
+        
+        
+        
+         ** Job Experience :**
+  Graduate Teaching Assistant at George Mason University: 
+  I  currently work as a Graduate Teaching Assistant in the Department of Information Sciences and Technology, assisting more than 100 students with a Python-based advanced course.
+  
+  Graduate Research Assistant at George Mason University :
+  I worked as a Graduate Research Assistant involved with The Helio-physics Application Programmer’s Interface (HAPI). It is a data access specification (Backed by NASA), which uses a RESTful API and streaming format specification for delivering time series data.
+  
+  Full Stack Developer at Tech Mahindra :
+  I was involved in building full-stack applications using MEAN and MERN stacks on top of blockchain technologies like Ethereum and Hyperledger Fabric.
+        
+        
       </header>
       <section>
 
